# rss-parsers

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: docker-publish.yml
parser/: __main__.py
rssparser/: __main__.py  config.py  temp.py  worker.py
rssparser/api/: articles.py  authors.py  client.py  feeds.py  models.py
rssparser/rss/: __init__.py  client.py  models.py
