[tool.poetry]
name = "rss-parsers"
version = "0.1.0"
description = ""
authors = ["Vladimir Puzakov <puzakov@tochka.com>"]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.21.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
